<resources>
    <string name="app_name">Taller-Android-BD</string>
    <string name="start">Iniciar</string>
    <string name="add">Añadir</string>
    <string name="new_item">Nuevo Item</string>
    <string name="item_detail">Detalles</string>
    <string name="exit">Salir</string>
    <string name="test">Test</string>
    <string name="editLastNameHint">Apellido</string>
    <string name="editNameHint">Nombre</string>
    <string name="getNombre">Nombre</string>
    <string name="getId">id</string>
    <string name="getDetail">Update</string>
    <string name="getNombreLabel">Nombre :</string>
    <string name="getIdLabel">Id :</string>
    <string name="getDetailLabel">Last Update :</string>
    <string name="buttonIngresarActor">Ingresar Actor</string>
</resources>
